--- a/disease-classification-after-pca-using-ann-and-rf.ipynb
+++ b/disease-classification-after-pca-using-ann-and-rf.ipynb
@@ -1924,101 +1924,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 119,
    "id": "5e924513",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>itching</th>\n",
-       "      <th>skin_rash</th>\n",
-       "      <th>nodal_skin_eruptions</th>\n",
-       "      <th>continuous_sneezing</th>\n",
-       "      <th>shivering</th>\n",
-       "      <th>chills</th>\n",
-       "      <th>joint_pain</th>\n",
-       "      <th>stomach_pain</th>\n",
-       "      <th>acidity</th>\n",
-       "      <th>ulcers_on_tongue</th>\n",
-       "      <th>...</th>\n",
-       "      <th>constipation</th>\n",
-       "      <th>abdominal_pain</th>\n",
-       "      <th>diarrhoea</th>\n",
-       "      <th>mild_fever</th>\n",
-       "      <th>yellow_urine</th>\n",
-       "      <th>yellowing_of_eyes</th>\n",
-       "      <th>acute_liver_failure</th>\n",
-       "      <th>fluid_overload</th>\n",
-       "      <th>swelling_of_stomach</th>\n",
-       "      <th>swelled_lymph_nodes</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1 rows × 48 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "0 itching skin_rash nodal_skin_eruptions continuous_sneezing shivering chills  \\\n",
-       "0       1         0                    0                   0         0      1   \n",
-       "\n",
-       "0 joint_pain stomach_pain acidity ulcers_on_tongue  ... constipation  \\\n",
-       "0          1            0       1                1  ...            0   \n",
-       "\n",
-       "0 abdominal_pain diarrhoea mild_fever yellow_urine yellowing_of_eyes  \\\n",
-       "0              1         1          0            0                 0   \n",
-       "\n",
-       "0 acute_liver_failure fluid_overload swelling_of_stomach swelled_lymph_nodes  \n",
-       "0                   0              0                   1                   1  \n",
-       "\n",
-       "[1 rows x 48 columns]"
+       "array([[1., 0., 0., 0., 0., 1., 1., 0., 1., 1., 1., 0., 0., 0., 1., 1.,\n",
+       "        0., 1., 0., 1., 0., 0., 0., 0., 1., 1., 1., 1., 1., 0., 1., 0.,\n",
+       "        1., 1., 1., 0., 0., 1., 0., 1., 1., 0., 0., 0., 0., 0., 1., 1.]],\n",
+       "      dtype=float32)"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2026,27 +1945,42 @@
    "source": [
     "ti = [1, 0, 0, 0, 0, 1, 1, 0, 1, 1, 1, 0, 0, 0, 1, 1, 0, 1, 0, 1, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 1, 0, 1, 1, 1, 0, 0, 1, 0, 1, 1, 0, 0, 0, 0, 0, 1, 1]\n",
     "t = dis_data(ti)\n",
+    "t = np.asarray(t).astype(np.float32)\n",
     "t"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 120,
    "id": "61631517",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Failed to convert a NumPy array to a Tensor (Unsupported object type int).",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Zaynab\\GitHub\\Personal\\Disease symptom prediction\\Disease-Symptom-Prediction\\disease-classification-after-pca-using-ann-and-rf.ipynb Cell 37\u001b[0m line \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Zaynab/GitHub/Personal/Disease%20symptom%20prediction/Disease-Symptom-Prediction/disease-classification-after-pca-using-ann-and-rf.ipynb#Y132sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m model\u001b[39m.\u001b[39;49mpredict(t)\n",
-      "File \u001b[1;32mc:\\Users\\ThisPC\\anaconda3\\envs\\tf-new\\lib\\site-packages\\keras\\utils\\traceback_utils.py:70\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     67\u001b[0m     filtered_tb \u001b[39m=\u001b[39m _process_traceback_frames(e\u001b[39m.\u001b[39m__traceback__)\n\u001b[0;32m     68\u001b[0m     \u001b[39m# To get the full stack trace, call:\u001b[39;00m\n\u001b[0;32m     69\u001b[0m     \u001b[39m# `tf.debugging.disable_traceback_filtering()`\u001b[39;00m\n\u001b[1;32m---> 70\u001b[0m     \u001b[39mraise\u001b[39;00m e\u001b[39m.\u001b[39mwith_traceback(filtered_tb) \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39m\n\u001b[0;32m     71\u001b[0m \u001b[39mfinally\u001b[39;00m:\n\u001b[0;32m     72\u001b[0m     \u001b[39mdel\u001b[39;00m filtered_tb\n",
-      "File \u001b[1;32mc:\\Users\\ThisPC\\anaconda3\\envs\\tf-new\\lib\\site-packages\\tensorflow\\python\\framework\\constant_op.py:102\u001b[0m, in \u001b[0;36mconvert_to_eager_tensor\u001b[1;34m(value, ctx, dtype)\u001b[0m\n\u001b[0;32m    100\u001b[0m     dtype \u001b[39m=\u001b[39m dtypes\u001b[39m.\u001b[39mas_dtype(dtype)\u001b[39m.\u001b[39mas_datatype_enum\n\u001b[0;32m    101\u001b[0m ctx\u001b[39m.\u001b[39mensure_initialized()\n\u001b[1;32m--> 102\u001b[0m \u001b[39mreturn\u001b[39;00m ops\u001b[39m.\u001b[39;49mEagerTensor(value, ctx\u001b[39m.\u001b[39;49mdevice_name, dtype)\n",
-      "\u001b[1;31mValueError\u001b[0m: Failed to convert a NumPy array to a Tensor (Unsupported object type int)."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 126ms/step\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[2.2925482e-15, 1.8928146e-08, 1.5043351e-09, 2.0511879e-09,\n",
+       "        1.5322495e-07, 1.6457991e-11, 4.6204939e-04, 1.0199826e-06,\n",
+       "        2.9634744e-01, 5.7999197e-05, 5.5324776e-06, 7.3829608e-04,\n",
+       "        8.0801274e-06, 2.5149043e-16, 1.0093157e-09, 1.7291349e-10,\n",
+       "        3.7068115e-09, 1.8467799e-07, 1.5917040e-08, 1.1885766e-03,\n",
+       "        1.9286181e-04, 3.6526433e-09, 2.8202683e-03, 4.3789542e-12,\n",
+       "        7.2760746e-02, 2.5663641e-10, 5.7337595e-05, 1.0827098e-05,\n",
+       "        4.9666986e-03, 7.4052899e-05, 1.7610318e-09, 1.8836601e-11,\n",
+       "        5.2149206e-14, 1.5377969e-08, 1.2757348e-04, 3.7129038e-09,\n",
+       "        6.1990935e-01, 2.6676478e-04, 1.6544953e-15, 2.9894605e-07,\n",
+       "        3.6724887e-06, 1.8374711e-12]], dtype=float32)"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
