--- a/disease-classification-after-pca-using-ann-and-rf.ipynb
+++ b/disease-classification-after-pca-using-ann-and-rf.ipynb
@@ -1993,7 +1993,9 @@
    "id": "f08f9ad4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pred=np.argmax(prediction, axis=1)"
+   ]
   },
   {
    "cell_type": "code",
