--- a/disease-classification-after-pca-using-ann-and-rf.ipynb
+++ b/disease-classification-after-pca-using-ann-and-rf.ipynb
@@ -1951,7 +1951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 121,
    "id": "61631517",
    "metadata": {},
    "outputs": [
@@ -1959,42 +1959,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 126ms/step\n"
+      "1/1 [==============================] - 0s 44ms/step\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "predict = model.predict(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "f08f9ad4",
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[2.2925482e-15, 1.8928146e-08, 1.5043351e-09, 2.0511879e-09,\n",
-       "        1.5322495e-07, 1.6457991e-11, 4.6204939e-04, 1.0199826e-06,\n",
-       "        2.9634744e-01, 5.7999197e-05, 5.5324776e-06, 7.3829608e-04,\n",
-       "        8.0801274e-06, 2.5149043e-16, 1.0093157e-09, 1.7291349e-10,\n",
-       "        3.7068115e-09, 1.8467799e-07, 1.5917040e-08, 1.1885766e-03,\n",
-       "        1.9286181e-04, 3.6526433e-09, 2.8202683e-03, 4.3789542e-12,\n",
-       "        7.2760746e-02, 2.5663641e-10, 5.7337595e-05, 1.0827098e-05,\n",
-       "        4.9666986e-03, 7.4052899e-05, 1.7610318e-09, 1.8836601e-11,\n",
-       "        5.2149206e-14, 1.5377969e-08, 1.2757348e-04, 3.7129038e-09,\n",
-       "        6.1990935e-01, 2.6676478e-04, 1.6544953e-15, 2.9894605e-07,\n",
-       "        3.6724887e-06, 1.8374711e-12]], dtype=float32)"
+       "36"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.predict(t)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f08f9ad4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pred=np.argmax(prediction, axis=1)"
+    "pred=np.argmax(predict, axis=1)\n",
+    "pred[0]"
    ]
   },
   {
@@ -2662,23 +2654,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 124,
    "id": "6927be3e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Common Cold'"
+       "'(vertigo) Paroymsal  Positional Vertigo'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "disease_names[26]"
+    "disease_names[36]"
    ]
   },
   {
