--- a/disease-classification-after-pca-using-ann-and-rf.ipynb
+++ b/disease-classification-after-pca-using-ann-and-rf.ipynb
@@ -983,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 128,
    "id": "dd40201b",
    "metadata": {
     "execution": {
@@ -1001,17 +1001,9 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "41\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(len(test_df['prognosis'].unique()))"
+    "#print(len(test_df['prognosis'].unique()))"
    ]
   },
   {
@@ -1176,6 +1168,14 @@
     "disease_classes = print (le.classes_)\n",
     "disease_classes"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "654058c7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1991,18 +1991,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 126,
    "id": "430123c5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Assets written to: filepath=\\assets\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# filepath = 'ann_model.joblib'\n",
     "# model.save(\"filepath=\")"
