--- a/disease-classification-after-pca-using-ann-and-rf.ipynb
+++ b/disease-classification-after-pca-using-ann-and-rf.ipynb
@@ -1643,7 +1643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 129,
    "id": "d17afc18",
    "metadata": {
     "execution": {
@@ -1661,241 +1661,30 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test Data Accuracy using ANN= 100.0 %\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(\"Test Data Accuracy using ANN=\",Test_accuracy,\"%\")"
+    "#print(\"Test Data Accuracy using ANN=\",Test_accuracy,\"%\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "id": "68a5a801",
+   "execution_count": null,
+   "id": "a2b992ff",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>itching</th>\n",
-       "      <th>skin_rash</th>\n",
-       "      <th>nodal_skin_eruptions</th>\n",
-       "      <th>continuous_sneezing</th>\n",
-       "      <th>shivering</th>\n",
-       "      <th>chills</th>\n",
-       "      <th>joint_pain</th>\n",
-       "      <th>stomach_pain</th>\n",
-       "      <th>acidity</th>\n",
-       "      <th>ulcers_on_tongue</th>\n",
-       "      <th>...</th>\n",
-       "      <th>constipation</th>\n",
-       "      <th>abdominal_pain</th>\n",
-       "      <th>diarrhoea</th>\n",
-       "      <th>mild_fever</th>\n",
-       "      <th>yellow_urine</th>\n",
-       "      <th>yellowing_of_eyes</th>\n",
-       "      <th>acute_liver_failure</th>\n",
-       "      <th>fluid_overload</th>\n",
-       "      <th>swelling_of_stomach</th>\n",
-       "      <th>swelled_lymph_nodes</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 48 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   itching  skin_rash  nodal_skin_eruptions  continuous_sneezing  shivering  \\\n",
-       "0        1          1                     1                    0          0   \n",
-       "1        0          0                     0                    1          1   \n",
-       "2        0          0                     0                    0          0   \n",
-       "3        1          0                     0                    0          0   \n",
-       "4        1          1                     0                    0          0   \n",
-       "\n",
-       "   chills  joint_pain  stomach_pain  acidity  ulcers_on_tongue  ...  \\\n",
-       "0       0           0             0        0                 0  ...   \n",
-       "1       1           0             0        0                 0  ...   \n",
-       "2       0           0             1        1                 1  ...   \n",
-       "3       0           0             0        0                 0  ...   \n",
-       "4       0           0             1        0                 0  ...   \n",
-       "\n",
-       "   constipation  abdominal_pain  diarrhoea  mild_fever  yellow_urine  \\\n",
-       "0             0               0          0           0             0   \n",
-       "1             0               0          0           0             0   \n",
-       "2             0               0          0           0             0   \n",
-       "3             0               1          0           0             0   \n",
-       "4             0               0          0           0             0   \n",
-       "\n",
-       "   yellowing_of_eyes  acute_liver_failure  fluid_overload  \\\n",
-       "0                  0                    0               0   \n",
-       "1                  0                    0               0   \n",
-       "2                  0                    0               0   \n",
-       "3                  1                    0               0   \n",
-       "4                  0                    0               0   \n",
-       "\n",
-       "   swelling_of_stomach  swelled_lymph_nodes  \n",
-       "0                    0                    0  \n",
-       "1                    0                    0  \n",
-       "2                    0                    0  \n",
-       "3                    0                    0  \n",
-       "4                    0                    0  \n",
-       "\n",
-       "[5 rows x 48 columns]"
-      ]
-     },
-     "execution_count": 92,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "109a8757",
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "x_test.head()"
+    "key = [\"itching\", \"skin_rash\", \"nodal_skin_eruptions\", \"continuous_sneezing\"]\n",
+    "values = [0,0,0,0]\n",
+    "\n",
+    "if "
    ]
   },
   {
