--- a/disease-classification-after-pca-using-ann-and-rf.ipynb
+++ b/disease-classification-after-pca-using-ann-and-rf.ipynb
@@ -1713,6 +1713,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 133,
+   "id": "3e0756a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+    "da = dis_data(d)\n",
+    "da.to_csv(\"empty_df.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 119,
    "id": "5e924513",
    "metadata": {},
