--- a/disease-classification-after-pca-using-ann-and-rf.ipynb
+++ b/disease-classification-after-pca-using-ann-and-rf.ipynb
@@ -1713,14 +1713,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 136,
    "id": "3e0756a7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>itching</th>\n",
+       "      <th>skin_rash</th>\n",
+       "      <th>nodal_skin_eruptions</th>\n",
+       "      <th>continuous_sneezing</th>\n",
+       "      <th>shivering</th>\n",
+       "      <th>chills</th>\n",
+       "      <th>joint_pain</th>\n",
+       "      <th>stomach_pain</th>\n",
+       "      <th>acidity</th>\n",
+       "      <th>ulcers_on_tongue</th>\n",
+       "      <th>...</th>\n",
+       "      <th>constipation</th>\n",
+       "      <th>abdominal_pain</th>\n",
+       "      <th>diarrhoea</th>\n",
+       "      <th>mild_fever</th>\n",
+       "      <th>yellow_urine</th>\n",
+       "      <th>yellowing_of_eyes</th>\n",
+       "      <th>acute_liver_failure</th>\n",
+       "      <th>fluid_overload</th>\n",
+       "      <th>swelling_of_stomach</th>\n",
+       "      <th>swelled_lymph_nodes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 48 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "0  itching skin_rash nodal_skin_eruptions continuous_sneezing shivering  \\\n",
+       "0        1         0                    0                   0         0   \n",
+       "\n",
+       "0 chills joint_pain stomach_pain acidity ulcers_on_tongue  ... constipation  \\\n",
+       "0      0          0            0       0                0  ...            0   \n",
+       "\n",
+       "0 abdominal_pain diarrhoea mild_fever yellow_urine yellowing_of_eyes  \\\n",
+       "0              0         0          0            0                 0   \n",
+       "\n",
+       "0 acute_liver_failure fluid_overload swelling_of_stomach swelled_lymph_nodes  \n",
+       "0                   0              0                   0                   0  \n",
+       "\n",
+       "[1 rows x 48 columns]"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "d = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
     "da = dis_data(d)\n",
-    "da.to_csv(\"empty_df.csv\")"
+    "da[\"itching\"] = 1\n",
+    "da\n",
+    "#da.to_csv(\"empty_df.csv\")"
    ]
   },
   {
