--- a/disease-classification-after-pca-using-ann-and-rf.ipynb
+++ b/disease-classification-after-pca-using-ann-and-rf.ipynb
@@ -2198,6 +2198,7 @@
     }
    ],
    "source": [
+    "da_list = da.iloc[0].to_list()\n",
     "da_arr = np.array(da_list)\n",
     "da_arr = da_arr.reshape(1,-1)\n",
     "\n",
