--- a/sympt.ipynb
+++ b/sympt.ipynb
@@ -17,18 +17,13 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import plotly.express as px\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import classification_report,confusion_matrix,accuracy_score\n",
-    "from sklearn.metrics import precision_score, recall_score, f1_score\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
     "import streamlit as st\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import classification_report,confusion_matrix,accuracy_score\n",
     "from sklearn.metrics import precision_score, recall_score, f1_score\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras.layers import Dense\n",
     "from tensorflow.keras.models import Sequential\n",
@@ -40,6 +35,23 @@
    "metadata": {},
    "source": [
     "#### Load Datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.10.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tf.__version__)"
    ]
   },
   {
