--- a/sympt.ipynb
+++ b/sympt.ipynb
@@ -290,14 +290,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Description shape is: (41, 2)\n"
+      "Description shape is: (42, 2)\n"
      ]
     },
     {
@@ -328,7 +328,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Drug_Reaction</td>\n",
+       "      <td>Drug Reaction</td>\n",
        "      <td>An adverse drug reaction (ADR) is an injury ca...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -357,14 +357,14 @@
       ],
       "text/plain": [
        "          Disease                                        Description\n",
-       "0   Drug_Reaction  An adverse drug reaction (ADR) is an injury ca...\n",
+       "0   Drug Reaction  An adverse drug reaction (ADR) is an injury ca...\n",
        "1         Malaria  An infectious disease caused by protozoan para...\n",
        "2         Allergy  An allergy is an immune system response to a f...\n",
        "3  Hypothyroidism  Hypothyroidism, also called underactive thyroi...\n",
        "4       Psoriasis  Psoriasis is a common skin disorder that forms..."
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1097,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1158,7 +1158,7 @@
        "4  15"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1179,11 +1179,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['(vertigo) Paroymsal  Positional Vertigo', 'AIDS', 'Acne',\n",
+       "       'Alcoholic hepatitis', 'Allergy', 'Arthritis', 'Bronchial Asthma',\n",
+       "       'Cervical spondylosis', 'Chicken pox', 'Chronic cholestasis',\n",
+       "       'Common Cold', 'Dengue', 'Diabetes ',\n",
+       "       'Dimorphic hemmorhoids(piles)', 'Drug Reaction',\n",
+       "       'Fungal infection', 'GERD', 'Gastroenteritis', 'Heart attack',\n",
+       "       'Hepatitis B', 'Hepatitis C', 'Hepatitis D', 'Hepatitis E',\n",
+       "       'Hypertension ', 'Hyperthyroidism', 'Hypoglycemia',\n",
+       "       'Hypothyroidism', 'Impetigo', 'Jaundice', 'Malaria', 'Migraine',\n",
+       "       'No disease', 'Osteoarthristis', 'Paralysis (brain hemorrhage)',\n",
+       "       'Peptic ulcer diseae', 'Pneumonia', 'Psoriasis', 'Tuberculosis',\n",
+       "       'Typhoid', 'Urinary tract infection', 'Varicose veins',\n",
+       "       'hepatitis A'], dtype=object)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "disease_classes = le.classes_ "
+    "disease_classes = le.classes_ \n",
+    "disease_classes"
    ]
   },
   {
