--- a/sympt.ipynb
+++ b/sympt.ipynb
@@ -1021,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1104,89 +1104,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_test=test_df.drop(['malaise',\n",
-    " 'blurred_and_distorted_vision',\n",
-    " 'phlegm',\n",
-    " 'throat_irritation',\n",
-    " 'redness_of_eyes',\n",
+    "x_test=test_df.drop([\n",
     " 'sinus_pressure',\n",
-    " 'runny_nose',\n",
-    " 'congestion',\n",
-    " 'chest_pain',\n",
-    " 'weakness_in_limbs',\n",
-    " 'fast_heart_rate',\n",
-    " 'pain_during_bowel_movements',\n",
-    " 'pain_in_anal_region',\n",
-    " 'bloody_stool',\n",
     " 'irritation_in_anus',\n",
-    " 'neck_pain',\n",
-    " 'dizziness',\n",
-    " 'cramps',\n",
-    " 'bruising',\n",
-    " 'obesity',\n",
-    " 'swollen_legs',\n",
     " 'swollen_blood_vessels',\n",
-    " 'puffy_face_and_eyes',\n",
     " 'enlarged_thyroid',\n",
     " 'brittle_nails',\n",
-    " 'swollen_extremeties',\n",
-    " 'excessive_hunger',\n",
-    " 'extra_marital_contacts',\n",
     " 'drying_and_tingling_lips',\n",
     " 'slurred_speech',\n",
-    " 'knee_pain',\n",
-    " 'hip_joint_pain',\n",
-    " 'muscle_weakness',\n",
-    " 'stiff_neck',\n",
-    " 'swelling_joints',\n",
-    " 'movement_stiffness',\n",
     " 'spinning_movements',\n",
     " 'loss_of_balance',\n",
-    " 'unsteadiness',\n",
     " 'weakness_of_one_body_side',\n",
     " 'loss_of_smell',\n",
-    " 'bladder_discomfort',\n",
-    " 'foul_smell_of urine',\n",
     " 'continuous_feel_of_urine',\n",
-    " 'passage_of_gases',\n",
     " 'internal_itching',\n",
     " 'toxic_look_(typhos)',\n",
-    " 'depression',\n",
-    " 'irritability',\n",
-    " 'muscle_pain',\n",
     " 'altered_sensorium',\n",
-    " 'red_spots_over_body',\n",
-    " 'belly_pain',\n",
-    " 'abnormal_menstruation',\n",
     " 'dischromic _patches',\n",
-    " 'watering_from_eyes',\n",
-    " 'increased_appetite',\n",
-    " 'polyuria',\n",
     " 'family_history',\n",
     " 'mucoid_sputum',\n",
     " 'rusty_sputum',\n",
-    " 'lack_of_concentration',\n",
-    " 'visual_disturbances',\n",
-    " 'receiving_blood_transfusion',\n",
     " 'receiving_unsterile_injections',\n",
     " 'coma',\n",
     " 'stomach_bleeding',\n",
     " 'distention_of_abdomen',\n",
-    " 'history_of_alcohol_consumption',\n",
     " 'fluid_overload.1',\n",
-    " 'blood_in_sputum',\n",
     " 'prominent_veins_on_calf',\n",
-    " 'palpitations',\n",
-    " 'painful_walking',\n",
-    " 'pus_filled_pimples',\n",
-    " 'blackheads',\n",
-    " 'scurring',\n",
-    " 'skin_peeling',\n",
     " 'silver_like_dusting',\n",
     " 'small_dents_in_nails',\n",
     " 'inflammatory_nails',\n",
-    " 'blister',\n",
-    " 'red_sore_around_nose',\n",
     " 'yellow_crust_ooze',\n",
     " 'prognosis'],axis=1)\n",
     "y_test=test_df['prognosis']"
