--- a/sympt.ipynb
+++ b/sympt.ipynb
@@ -31,6 +31,213 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "disease = \"Malaria\"\n",
+    "d = \"Allergy\"\n",
+    "drugs = \"PCM\"\n",
+    "options = \"Skin_rash\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create variables\n",
+    "real_disease = disease\n",
+    "predicted_disease = d\n",
+    "drugs_on = drugs\n",
+    "user_symptoms = options\n",
+    "\n",
+    "# Make into a dictionary\n",
+    "dic = {\"symptoms\": user_symptoms,\"predicted_disease\" :predicted_disease,  \"disease\": real_disease, \"drugs_on\": drugs}\n",
+    "\n",
+    "# Create Dataframe\n",
+    "data = pd.DataFrame(dic, index=range(1))\n",
+    "\n",
+    "# Concatenate\n",
+    "#updated_data = pd.concat([])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "disease = \"Acne\"\n",
+    "d = \"Fungal infection\"\n",
+    "drugs = \"Benzoic Peroxide\"\n",
+    "options = \"Skin_rash\", \"itching\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dic = {\"symptoms\": options,\"predicted_disease\" :d,  \"disease\": disease, \"drugs_on\": drugs}\n",
+    "\n",
+    "updated_data = pd.DataFrame(dic, index=range(len(options)))\n",
+    "updated_data.to_csv(\"updated_data.csv\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>symptoms</th>\n",
+       "      <th>predicted_disease</th>\n",
+       "      <th>disease</th>\n",
+       "      <th>drugs_on</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Skin_rash</td>\n",
+       "      <td>Allergy</td>\n",
+       "      <td>Acne</td>\n",
+       "      <td>Benzoic Peroxide</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>itching</td>\n",
+       "      <td>Allergy</td>\n",
+       "      <td>Acne</td>\n",
+       "      <td>Benzoic Peroxide</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    symptoms predicted_disease disease          drugs_on\n",
+       "0  Skin_rash           Allergy    Acne  Benzoic Peroxide\n",
+       "1    itching           Allergy    Acne  Benzoic Peroxide"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dic_g = {\"symptoms\": options,\"predicted_disease\" :d,  \"disease\": disease, \"drugs_on\": drugs}\n",
+    "g = pd.DataFrame(dic_g, index=range(len(options)))\n",
+    "g"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>symptoms</th>\n",
+       "      <th>predicted_disease</th>\n",
+       "      <th>disease</th>\n",
+       "      <th>drugs_on</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Skin_rash</td>\n",
+       "      <td>Allergy</td>\n",
+       "      <td>Malaria</td>\n",
+       "      <td>PCM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Skin_rash</td>\n",
+       "      <td>Allergy</td>\n",
+       "      <td>Acne</td>\n",
+       "      <td>Benzoic Peroxide</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>itching</td>\n",
+       "      <td>Allergy</td>\n",
+       "      <td>Acne</td>\n",
+       "      <td>Benzoic Peroxide</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    symptoms predicted_disease  disease          drugs_on\n",
+       "0  Skin_rash           Allergy  Malaria               PCM\n",
+       "0  Skin_rash           Allergy     Acne  Benzoic Peroxide\n",
+       "1    itching           Allergy     Acne  Benzoic Peroxide"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.concat([f,g])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
