--- a/sympt.ipynb
+++ b/sympt.ipynb
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -788,14 +788,14 @@
        "4         0.0         0.0         0.0         0.0         0.0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "new_df_1 = encode_symptoms(df_1, df_4)\n",
-    "new_df_1.head()"
+    "new_df = encode_symptoms(df_1, df_4)\n",
+    "new_df.head()"
    ]
   },
   {
@@ -803,6 +803,86 @@
    "metadata": {},
    "source": [
     "### Initial Random Forest based on encoding disease severity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# separating the data and labels\n",
+    "X = new_df.drop(columns='Disease', axis=1)\n",
+    "Y = new_df['Disease']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = StandardScaler()\n",
+    "scaler.fit(X)\n",
+    "X = scaler.transform(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest\n",
+      "Accuracy: 0.9908536585365854\n",
+      "Precision: 0.9916531165311654\n",
+      "Recall: 0.9918172648227722\n",
+      "F1-Score: 0.9914105369307706\n",
+      "975\n",
+      "Confusion matrix\n",
+      "[[31  0  0 ...  0  0  0]\n",
+      " [ 0 28  0 ...  0  0  0]\n",
+      " [ 0  0 21 ...  0  0  0]\n",
+      " ...\n",
+      " [ 0  0  0 ... 24  0  0]\n",
+      " [ 0  0  0 ...  0 22  0]\n",
+      " [ 0  0  0 ...  0  0 24]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "# Split the data into training and testing sets\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Create a Random Forest Classifier\n",
+    "rfc_classifier = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+    "\n",
+    "# Fit the model on the training data\n",
+    "rfc_classifier.fit(X_train, Y_train)\n",
+    "\n",
+    "# Predict disease labels on the testing data\n",
+    "Y_pred = rfc_classifier.predict(X_test)\n",
+    "\n",
+    "# Calculate accuracy\n",
+    "accuracy = accuracy_score(Y_test, Y_pred)\n",
+    "\n",
+    "precision = precision_score(Y_test, Y_pred, average='macro')\n",
+    "recall = recall_score(Y_test, Y_pred,average='macro')\n",
+    "f1 = f1_score(Y_test, Y_pred, average='macro')\n",
+    "\n",
+    "print(\"Random Forest\")\n",
+    "print(f'Accuracy: {accuracy}')\n",
+    "print(f'Precision: {precision}')\n",
+    "print(f'Recall: {recall}')\n",
+    "print(f'F1-Score: {f1}')\n",
+    "print(accuracy_score(Y_test, Y_pred,normalize=False))\n",
+    "print(\"Confusion matrix\")\n",
+    "conf_matrix=confusion_matrix(Y_test,Y_pred)\n",
+    "print(conf_matrix)"
    ]
   },
   {
@@ -4397,30 +4477,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def encode_symptoms(df, data_severity):\n",
-    "    for i in data_severity.index:\n",
-    "        symptom = data_severity[\"Symptom\"][i]\n",
-    "        weight = data_severity[\"weight\"][i]\n",
-    "        df = df.replace(symptom, weight)\n",
-    "\n",
-    "    # Replace missing values with 0\n",
-    "    df = df.fillna(0)\n",
-    "\n",
-    "    # Additional hardcoded replacements\n",
-    "    df = df.replace(\"foul_smell_of_urine\", 5)\n",
-    "    df = df.replace(\"dischromic__patches\", 6)\n",
-    "    df = df.replace(\"spotting__urination\", 6)\n",
-    "    \n",
-    "    return df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_df = encode_symptoms(df_1, df_4)"
+    "# new_df = encode_symptoms(df_1, df_4)"
    ]
   },
   {
@@ -4440,83 +4497,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaler = StandardScaler()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scaler.fit(X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "scaler = StandardScaler()\n",
+    "scaler.fit(X)\n",
     "X = scaler.transform(X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 133,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Random Forest\n",
-      "Accuracy: 0.9908536585365854\n",
-      "Precision: 0.9916531165311654\n",
-      "Recall: 0.9918172648227722\n",
-      "F1-Score: 0.9914105369307706\n",
-      "975\n",
-      "Confusion matrix\n",
-      "[[31  0  0 ...  0  0  0]\n",
-      " [ 0 28  0 ...  0  0  0]\n",
-      " [ 0  0 21 ...  0  0  0]\n",
-      " ...\n",
-      " [ 0  0  0 ... 24  0  0]\n",
-      " [ 0  0  0 ...  0 22  0]\n",
-      " [ 0  0  0 ...  0  0 24]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "# Split the data into training and testing sets\n",
-    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.2, random_state=42)\n",
-    "\n",
-    "# Create a Random Forest Classifier\n",
-    "rfc_classifier = RandomForestClassifier(n_estimators=100, random_state=42)\n",
-    "\n",
-    "# Fit the model on the training data\n",
-    "rfc_classifier.fit(X_train, Y_train)\n",
-    "\n",
-    "# Predict disease labels on the testing data\n",
-    "Y_pred = rfc_classifier.predict(X_test)\n",
-    "\n",
-    "# Calculate accuracy\n",
-    "accuracy = accuracy_score(Y_test, Y_pred)\n",
-    "\n",
-    "precision = precision_score(Y_test, Y_pred, average='macro')\n",
-    "recall = recall_score(Y_test, Y_pred,average='macro')\n",
-    "f1 = f1_score(Y_test, Y_pred, average='macro')\n",
-    "\n",
-    "print(\"Random Forest\")\n",
-    "print(f'Accuracy: {accuracy}')\n",
-    "print(f'Precision: {precision}')\n",
-    "print(f'Recall: {recall}')\n",
-    "print(f'F1-Score: {f1}')\n",
-    "print(accuracy_score(Y_test, Y_pred,normalize=False))\n",
-    "print(\"Confusion matrix\")\n",
-    "conf_matrix=confusion_matrix(Y_test,Y_pred)\n",
-    "print(conf_matrix)"
    ]
   },
   {
